--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,181 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #FFF1F7;
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --subheading-color: #FF8DCB;
+}
+
+.theme-light a.accent-text {
+  color: var(--text-color, #353430);
+  text-shadow: 2px 2px var(--subheading-color, #FF8DCB);  
+}
+
+.theme-light a.accent-text:focus-visible {
+  outline: none;
+  border: 1px solid var(--text-color, #353430);
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  background-color: var(--bg-color), #FFF1F7;
+  background-image: url(/images/cover-image-light.png);
+  color: var(--text-color, #353430);
+}
+
+.theme-light .header__rec {
+  display: none;
+}
+
+.theme-light .header::before {
+  border-top: 1px solid var(--text-color, #353430);
+  border-right: 1px solid var(--text-color, #353430);
+}
+
+.theme-light .header::after {
+  border-bottom: 1px solid var(--text-color, #353430);
+  border-left: 1px solid var(--text-color, #353430);
+}
+
+.theme-light .header__theme-menu-button {
+  color: var(--text-color, #353430);
+}
+
+.theme-light .header__theme-menu-button:hover {
+  border: 1px solid rgba(53, 52, 48, 0.4);
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--text-color, #353430);
+}
+
+.theme-light .header__theme-menu-button_active {
+  border: 1px solid var(--text-color, #353430);
+}
+
+.theme-light .title {
+  color: var(--title-color, #FFC2E6);
+  text-shadow: 4px 4px 0 var(--subheading-color, #FF8DCB);
+}
+
+.theme-light .subtitle,
+.theme-light .content__section-subheading {
+  color: var(--text-color, #353430);
+}
+
+.theme-light .title-decor {
+  background-color: var(--subheading-color, #FF8DCB);
+}
+
+.theme-light .content__section-heading {
+  color: var(--text-color, #353430);
+}
+
+.theme-light .footer__text {
+  color: var(--title-color, #FFC2E6);
+  text-shadow: 2px 2px 0 var(--subheading-color, #FF8DCB);
+}
+
+.theme-light .footer::before {
+  border-top: 1px solid var(--text-color, #353430);
+  border-right: 1px solid var(--text-color, #353430);
+}
+
+.theme-light .footer::after {
+  border-bottom: 1px solid var(--text-color, #353430);
+  border-left: 1px solid var(--text-color, #353430);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #FFF1F7;
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --subheading-color: #FF8DCB;   
+  }
+
+  .theme-light a.accent-text {
+    color: var(--text-color, #353430);
+    text-shadow: 2px 2px var(--subheading-color, #FF8DCB);  
+  }
+  
+  .theme-light a.accent-text:focus-visible {
+    outline: none;
+    border: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .page {
+    /* Вам также нужно будет написать ряд подобных селекторов */
+    background-color: var(--bg-color), #FFF1F7;
+    background-image: url(/images/cover-image-light.png);
+    color: var(--text-color, #353430);
+  }
+  
+  .theme-light .header__rec {
+    display: none;
+  }
+  
+  .theme-light .header::before {
+    border-top: 1px solid var(--text-color, #353430);
+    border-right: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .header::after {
+    border-bottom: 1px solid var(--text-color, #353430);
+    border-left: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .header__theme-menu-button {
+    color: var(--text-color, #353430);
+  }
+  
+  .theme-light .header__theme-menu-button:hover {
+    border: 1px solid rgba(53, 52, 48, 0.4);
+  }
+  
+  .theme-light .header__theme-menu-button:focus-visible {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .header__theme-menu-button_active {
+    border: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .title {
+    color: var(--title-color, #FFC2E6);
+    text-shadow: 4px 4px 0 var(--subheading-color, #FF8DCB);
+  }
+  
+  .theme-light .subtitle,
+  .theme-light .content__section-subheading {
+    color: var(--text-color, #353430);
+  }
+  
+  .theme-light .title-decor {
+    background-color: var(--subheading-color, #FF8DCB);
+  }
+  
+  .theme-light .content__section-heading {
+    color: var(--text-color, #353430);
+  }
+  
+  .theme-light .footer__text {
+    color: var(--title-color, #FFC2E6);
+    text-shadow: 2px 2px 0 var(--subheading-color, #FF8DCB);
+  }
+  
+  .theme-light .footer::before {
+    border-top: 1px solid var(--text-color, #353430);
+    border-right: 1px solid var(--text-color, #353430);
+  }
+  
+  .theme-light .footer::after {
+    border-bottom: 1px solid var(--text-color, #353430);
+    border-left: 1px solid var(--text-color, #353430);
+  }
 }
