--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,294 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+a.accent-text {
+  text-decoration: none; 
+}
+
+a.accent-text:hover {
+  text-decoration: underline;
+}
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: 'IBM Plex mono', serif;
+  background-image: url(/images/cover-image.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-size: 18px;
+}
+
+.header {
+  position: relative;
+  height: 1vh;
+  min-height: 668px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  margin: 10px;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 25px;
+  height: 25px;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 25px;
+  height: 25px;
+}
+
+.header__rec {
+  display: none;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style-type: none;
+}
+
+.header__theme-menu-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 26px;
+  background-color: transparent;
+  border: 0;
+  text-transform: lowercase;
+  font-size: 18px;
+  font-family: var(--main-font);
+  padding-bottom: 5px;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+}
+
+.title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  align-self: center;
+}
+
+.subtitle {
+  display: block;
+  font-size: 18px;
+  justify-self: end;
+  align-self: center;
+  max-width: 364px;
+}
+
+.content {
+  margin: 10px;
+}
+
+.content__section {
+  margin-block-start: 50px;
+}
+
+.content__section:first-of-type {
+  margin-block-start: 40px;
+}
+
+.content__section-heading {
+  font-size: 18px;
+}
+
+.content__section-focus {
+  display: grid;
+  gap: 20px;
+}
+
+.content__section-article {
+  display: grid;
+  gap: 10px;
+}
+
+.content__section-concentrate {
+  display: grid;
+  gap: 20px;
+}
+
+.content__section-fish {
+  display: grid;
+  gap: 20px;
+}
+
+.content__section-fish .content__section-heading {
+  grid-row: span 2;
+}
+
+.content__section-subheading-thin {
+  font-weight: 400;
+}
+
+.content__section-pics {
+  display: grid;
+  gap: 10px;
+}
+
+.content__section-gallery {
+  display: grid;
+  gap: 10px;
+}
+
+.content__section-gallery-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 1vh;
+  min-height: 668px;
+  margin-block-start: 40px;
+  margin: 10px;
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 25px;
+  height: 25px;
+}
+
+.footer::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+}
+
+.footer__text {
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+}
+
+@media (width >= 768px) {
+  .header {
+    margin: 20px 20px 20px 0;
+  }
+
+  .header::after {
+    left: 20px;
+  }
+
+  .title,
+  .footer__text {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .content {
+    margin: 20px;
+  }
+
+  .content__section {
+    margin-block-start: 80px;
+  }
+  
+  .content__section:first-of-type {
+    margin-block-start: 60px;
+  }
+
+  .content__section-focus {
+    grid-template-columns: 1fr 2fr;
+  }
+  
+  .content__section-focus .content__section-article {
+    grid-column-start: 2;
+  }
+  
+  .content__section-concentrate .content__section-heading {
+    max-width: 236px;
+  }
+  
+  .content__section-fish {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .content__section-fish .content__section-article {
+    grid-column-start: 2;
+  }
+
+  .content__section-pics {
+    gap: 20px;
+  }
+
+  .content__section-gallery {
+    gap: 20px;
+    grid-template-areas:
+    "top top right "
+    "left center right"
+    "left bottom bottom";
+  }
+
+  .img-sunset {
+    grid-area: top;
+  }
+
+  .img-icecream {
+    grid-area: right;
+  }
+
+  .img-tape {
+    grid-area: left;
+  }
+
+  .img-books {
+    grid-area: center;
+  }
+
+  .img-street {
+    grid-area: bottom;
+  }
+
+  .footer {
+    margin: 20px;
+    margin-block-start: 60px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    align-self: auto;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .subtitle {
+    max-width: 491px;
+  }
+
+  .content__section-concentrate .content__section-heading {
+    grid-column: span 3;
+    max-width: 315px;
+  }
+
+  .content__section-concentrate {
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+  }
+
 }
