--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,10 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --main-font: 'IBM Plex mono';
+  --bg-color: #000028;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --heading-color: #ff0070;
+}
