--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,96 +9,22 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-dark.png);
+  --main-font: 'IBM Plex mono';
   --bg-color: #000028;
-  --text-color: #f1b2ce;
-  --title-color: #db00ff;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --subtitle-color: #000028;
   --heading-color: #ff0070;
-}
-
-.theme-dark a.accent-text {
-  color: var(--text-color, #f1b2ce);
-  text-shadow: var(--heading-color, #ff0070) 2px 2px;
-}
-
-.theme-dark a.accent-text:focus-visible {
-  outline: none;
-  border: 1px solid var(--text-color, #f1b2ce);
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  background-color: var(--bg-color), #000028;
-  background-image: url(../images/cover-image-dark.png);
-  color: var(--text-color, #f1b2ce);
+  --subheading-color: #000028;
+  --titles-decor: #ff0070;
+  --button-border: rgba(255, 0, 112, 0.4);
 }
 
 .theme-dark .header__rec {
-  position: absolute;
   display: inline;
-  right: 28px;
-  color: var(--heading-color, #ff0070);
 }
 
 .theme-dark .header__rec::after {
-  content: "";
-  position: absolute;
   display: inline;
-  margin: 7px;
-  margin-left: 10px;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background-color: var(--heading-color, #ff0070);
-  box-shadow: 0 0 4px 2px var(--heading-color, #ff0070);
-}
-
-.theme-dark .decorated-zone::before {
-  border-top: 1px solid var(--heading-color, #ff0070);
-  border-right: 1px solid var(--heading-color, #ff0070);
-}
-
-.theme-dark .decorated-zone::after {
-  border-bottom: 1px solid var(--heading-color, #ff0070);
-  border-left: 1px solid var(--heading-color, #ff0070);
-}
-
-.theme-dark .header__theme-menu-button {
-  color: var(--heading-color, #ff0070);
-}
-
-.theme-dark .header__theme-menu-button:hover {
-  border: 1px solid rgba(255, 0, 112, 0.4);
-}
-
-.theme-dark .header__theme-menu-button:focus-visible {
-  outline: none;
-  border: none;
-  border-bottom: 1px solid var(--heading-color, #ff0070);
-}
-
-.theme-dark .header__theme-menu-button_active {
-  border: 1px solid var(--heading-color, #ff0070);
-}
-
-.theme-dark .title {
-  color: var(--title-color, #db00ff);
-  text-shadow: 4px 4px 0 var(--heading-color, #ff0070);
-}
-
-.theme-dark .subtitle,
-.theme-dark .content__section-subheading {
-  color: var(--bg-color, #000028);
-}
-
-.theme-dark .title-decor {
-  background-color: var(--heading-color, #ff0070);
-}
-
-.theme-dark .content__section-heading {
-  color: var(--heading-color, #ff0070);
-}
-
-.theme-dark .footer__text {
-  color: var(--title-color, #db00ff);
-  text-shadow: 2px 2px 0 var(--heading-color, #ff0070);
 }
