--- a/styles/light.css
+++ b/styles/light.css
@@ -9,169 +9,35 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-light.png);
   --bg-color: #fff1f7;
   --text-color: #353430;
   --title-color: #ffc2e6;
-  --subheading-color: #ff8dcb;
-}
-
-.theme-light a.accent-text {
-  color: var(--text-color, #353430);
-  text-shadow: 2px 2px var(--subheading-color, #ff8dcb);
-}
-
-.theme-light a.accent-text:hover {
-  border-bottom: 1px solid var(--text-color, #353430);
-}
-
-.theme-light a.accent-text:focus-visible {
-  outline: none;
-  border: 1px solid var(--text-color, #353430);
-}
-
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  background-color: var(--bg-color), #fff1f7;
-  background-image: url(../images/cover-image-light.png);
-  color: var(--text-color, #353430);
+  --subtitle-color: #353430;
+  --heading-color: #353430;
+  --subheading-color: #353430;
+  --titles-decor: #ff8dcb;
+  --button-border: rgba(53, 52, 48, 0.4);
 }
 
 .theme-light .header__rec {
   display: none;
 }
 
-.theme-light .decorated-zone::before {
-  border-top: 1px solid var(--text-color, #353430);
-  border-right: 1px solid var(--text-color, #353430);
-}
-
-.theme-light .decorated-zone::after {
-  border-bottom: 1px solid var(--text-color, #353430);
-  border-left: 1px solid var(--text-color, #353430);
-}
-
-.theme-light .header__theme-menu-button {
-  color: var(--text-color, #353430);
-}
-
-.theme-light .header__theme-menu-button:hover {
-  border: 1px solid rgba(53, 52, 48, 0.4);
-}
-
-.theme-light .header__theme-menu-button:focus-visible {
-  outline: none;
-  border: none;
-  border-bottom: 1px solid var(--text-color, #353430);
-}
-
-.theme-light .header__theme-menu-button_active {
-  border: 1px solid var(--text-color, #353430);
-}
-
-.theme-light .title {
-  color: var(--title-color, #ffc2e6);
-  text-shadow: 4px 4px 0 var(--subheading-color, #ff8dcb);
-}
-
-.theme-light .subtitle,
-.theme-light .content__section-subheading {
-  color: var(--text-color, #353430);
-}
-
-.theme-light .title-decor {
-  background-color: var(--subheading-color, #ff8dcb);
-}
-
-.theme-light .content__section-heading {
-  color: var(--text-color, #353430);
-}
-
-.theme-light .footer__text {
-  color: var(--title-color, #ffc2e6);
-  text-shadow: 2px 2px 0 var(--subheading-color, #ff8dcb);
-}
-
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-color: #fff1f7;
-    --text-color: #353430;
-    --title-color: #ffc2e6;
-    --subheading-color: #ff8dcb;
-  }
-
-  .theme-light a.accent-text {
-    color: var(--text-color, #353430);
-    text-shadow: 2px 2px var(--subheading-color, #ff8dcb);
-  }
-
-  .theme-light a.accent-text:hover {
-    border-bottom: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light a.accent-text:focus-visible {
-    outline: none;
-    border: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light .page {
-    /* Вам также нужно будет написать ряд подобных селекторов */
-    background-color: var(--bg-color), #fff1f7;
-    background-image: url(../images/cover-image-light.png);
-    color: var(--text-color, #353430);
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --title-color: #ffc2e6;
+  --subtitle-color: #353430;
+  --heading-color: #353430;
+  --subheading-color: #353430;
+  --titles-decor: #ff8dcb;
+  --button-border: rgba(53, 52, 48, 0.4);
   }
 
   .theme-light .header__rec {
     display: none;
-  }
-
-  .theme-light .decorated-zone::before {
-    border-top: 1px solid var(--text-color, #353430);
-    border-right: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light .decorated-zone::after {
-    border-bottom: 1px solid var(--text-color, #353430);
-    border-left: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light .header__theme-menu-button {
-    color: var(--text-color, #353430);
-  }
-
-  .theme-light .header__theme-menu-button:hover {
-    border: 1px solid rgba(53, 52, 48, 0.4);
-  }
-
-  .theme-light .header__theme-menu-button:focus-visible {
-    outline: none;
-    border: none;
-    border-bottom: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light .header__theme-menu-button_active {
-    border: 1px solid var(--text-color, #353430);
-  }
-
-  .theme-light .title {
-    color: var(--title-color, #ffc2e6);
-    text-shadow: 4px 4px 0 var(--subheading-color, #ff8dcb);
-  }
-
-  .theme-light .subtitle,
-  .theme-light .content__section-subheading {
-    color: var(--text-color, #353430);
-  }
-
-  .theme-light .title-decor {
-    background-color: var(--subheading-color, #ff8dcb);
-  }
-
-  .theme-light .content__section-heading {
-    color: var(--text-color, #353430);
-  }
-
-  .theme-light .footer__text {
-    color: var(--title-color, #ffc2e6);
-    text-shadow: 2px 2px 0 var(--subheading-color, #ff8dcb);
   }
 }
